examples/test/testpolicy15905.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15905
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key8: value28
      key19: value18
      key45: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value27
      podSelector:
        matchLabels:
          key44: value27
